--- a/src/app/components/UIKit/Button/Button.css
+++ b/src/app/components/UIKit/Button/Button.css
@@ -22,8 +22,8 @@ along with Ichigo UIKit. If not, see <http://www.gnu.org/licenses/>.
 */
 
 .button {
-    display: inline-block;
-
+    display: block;
+    
     margin-right: 2px;
     padding: 8px 16px;
     box-sizing: border-box;
@@ -38,6 +38,7 @@ along with Ichigo UIKit. If not, see <http://www.gnu.org/licenses/>.
     background: var(--base-0);
 
     border: 1px solid var(--base-3);
+    border-radius: 3px;
 
     cursor: default;
     outline: none;
